[project]
name = "agentic-content-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "pysimplegui>=5.0.8.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "together>=1.5.8",
]
